commenting on css

--- a/player.css
+++ b/player.css
@@ -10,11 +10,11 @@ body {
 }
 
 .music-player-container {
-  -webkit-transform: translate(-50%, -50%);
+  /* -webkit-transform: translate(-50%, -50%);
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
   display: inline-block;
   height: 370px;
   position: absolute;
@@ -48,11 +48,11 @@ body {
 }
 
 .player-content-container {
-  -webkit-transform: translateY(-50%);
+  /* -webkit-transform: translateY(-50%);
   -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
-  transform: translateY(-50%);
+  transform: translateY(-50%); */
   top: 50%;
   position: relative;
 }
