--- a/player.css
+++ b/player.css
@@ -18,7 +18,7 @@ body {
   top: 50%;
 }
 .music-player-container:after {
-  -webkit-filter: blur(8px);
+  
   filter: blur(8px);
   background-color: rgba(0, 0, 0, 0.8);
   bottom: -2px;
@@ -41,10 +41,10 @@ body {
   z-index: 3;
 }
 .player-content-container {
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
+  /* -webkit-transform: translateY(-50%); */
+  /* -moz-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
+  -o-transform: translateY(-50%); */
   transform: translateY(-50%);
   top: 50%;
   position: relative;
@@ -108,7 +108,7 @@ body {
   text-align: center;
 }
 [class^="control-"] {
-  -webkit-filter: brightness(95%);
+  /* -webkit-filter: brightness(95%); */
   filter: brightness(95%);
   border-radius: 100%;
   display: inline-block;
@@ -117,8 +117,8 @@ body {
   width: 44px;
 }
 [class^="control-"]:hover {
-  -webkit-filter: brightness(85%);
-  filter: brightness(85%);
+  /* -webkit-filter: brightness(85%); */
+  filter: brightness(85%); 
   cursor: pointer;
 }
 .control-play {
