--- a/player.css
+++ b/player.css
@@ -121,16 +121,22 @@ body {
   filter: brightness(85%); 
   cursor: pointer;
 }
-.control-play {
+/* .control-play {
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/play.svg") center/cover no-repeat;
 }
 .is-playing .control-play {
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/pause.svg") center/cover no-repeat;
 }
 .control-forwards {
-  background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/forwards.svg") center/cover no-repeat;
+  background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/forwards.svg") center/cover no-repeat; */
 }
-.control-back {
+/* #favBtn {
+  background:transparent;
+   border: radius 50px;
+   width: 50px;
+   height: 50px;
+} */
+.control-fav {
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/backwards.svg") center/cover no-repeat;
 }
 /* @-webkit-keyframes spin {
