--- a/player.css
+++ b/player.css
@@ -3,7 +3,8 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #FEF29C;
+height: 200px;
+background-image: linear-gradient(to right, rgba(202,130,101,1), rgba(229,174,143,1), rgba(255,218,185,1));
   color: #515044;
   font-family: 'Raleway', sans-serif;
 }
@@ -121,7 +122,7 @@ body {
   filter: brightness(85%); 
   cursor: pointer;
 }
-/* .control-play {
+ /* .control-play {
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/play.svg") center/cover no-repeat;
 }
 .is-playing .control-play {
@@ -129,7 +130,7 @@ body {
 }
 .control-forwards {
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/forwards.svg") center/cover no-repeat; */
-}
+ 
 /* #favBtn {
   background:transparent;
    border: radius 50px;
