play pause working

--- a/player.css
+++ b/player.css
@@ -9,10 +9,8 @@ background-image: linear-gradient(to right, rgba(202,130,101,1), rgba(229,174,14
   color: #515044;
   font-family: 'Raleway', sans-serif;
 }
-.music-player-container {
-   
+.music-container {
   transform: translate(-50%, -50%); 
-
   display: inline-block;
   height: 370px;
   position: absolute;
@@ -20,8 +18,7 @@ background-image: linear-gradient(to right, rgba(202,130,101,1), rgba(229,174,14
   left: 50%;
   top: 50%;
 }
-.music-player-container:after {
-
+.music-container:after {
   filter: blur(8px);
   background-color: rgba(0, 0, 0, 0.8);
   bottom: -2px;
@@ -115,3 +112,6 @@ background-image: linear-gradient(to right, rgba(202,130,101,1), rgba(229,174,14
   background: transparent url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/83141/backwards.svg") center/cover no-repeat;
 }
 
+.hide{
+  display: none;
+}
